--- a/index2.html
+++ b/index2.html
@@ -5,110 +5,79 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet" href="style2.css" type="text/css" />
-            <script type="text/javascript"></script>
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         </head>
         <body>
-            <div class=bg-fluid> 
-            <div class="container">
-            <div class="tags">
-                <a href="#">HOME</a>
-                &nbsp; &nbsp; 
-                <a href="#">ONEZERO</a>
-                &nbsp; &nbsp; 
-                <a href="#">ELEMENTAL</a> 
-                &nbsp; &nbsp;
-                <a href="#">HEATED</a>
-            </div> <br/>
-                <div class="content">
-                    <!-- <div class="mainb">
-                        <h1>Nothing Happens Untill the Sale is Made</h1>
+            <div class="bg-fluid">
+                <div class="first">
+                <div class="firstb">
+                    <div class="leftside">
+                    <div class="icon">
+                    <i class="fab fa-medium"></i>
                     </div>
-                    <div class="b1">
-                        <p>How to avoid common mistakes while selling <br/><br/>
-                            your product
-                        </p>
+                    &nbsp;
+                    <div class="name">
+                        <h1>Modus</h1>
                     </div>
-                    <div class="auth">
-                        <p>Dan Shipper in Better Programming</p>
                     </div>
-                    <div class="new">
-                    <div class="pub">
-                        <p>May 16 . 10 min read &#9733;</p>
+                    <div class="rightside">
+                    <div class="signin">
+                        <a href="#">Sign in</a> 
                     </div>
-                    <div class="resp">
-                        <i style="font-size:24px" class="fa">&#xf097;</i> 
+                    <div class="started">
+                        <a href="#" class="rect">Get started</a>
                     </div>
-                    </div> -->
-                </div> 
-                <!-- <div class="para">
-                    <div class="mainb">
-                        <h1>Tackling the Emotions Behind My Procrastination Problem</h1>
-                    </div>
-                    <div class="b1">
-                        <p>
-                            My habit of delaying to the last minutemay have deeper roots <br/><br/>
-                            than i'd realized
-                        </p>
-                    </div>
-                    <div class="auth">
-                        <p>Sara Zarr in Human Parts</p>
-                    </div>
-                    <div class="pub">
-                        <p>May 16 . 5 min read &#9733;</p>
-                    </div>
-                </div> <br/>
-                <div class="para">
-                    <div class="mainb">
-                        <h1>Femtech Could Be the Solution to <br/>
-                             Medicine`s Male Bias
-                        </h1>
-                    </div>
-                    <div class="b1">
-                        <p>Female Engineers are building a new health care <br/><br/>
-                            industry, but its future depends on mostly male....
-                        </p>
-                    </div>
-                    <div class="auth">
-                        <p>MORGAN MEAKER in OneZero</p>
-                    </div>
-                    <div class="pub">
-                        <p>May 16 . 6 min read &#9733;</p>
-                    </div>
-                </div> <br/>
-                <div class="para">
-                    <div class="mainb">
-                        <h1>Everybody`s Rich but You</h1>
-                    </div>
-                    <div class="b1">
-                        <p>IPO FOMO is real</p>
-                    </div>
-                    <div class="auth">
-                        <p>Sunil Rajaraman in The Bold italic</p>
-                    </div>
-                    <div class="pub">
-                        <p>may 9 . 6  min read &#9733;</p>
                     </div>
                 </div>
-                <div class="para">
-                    <div class="mainb">
-                        <h1>Warning Signs That a Bubble is About to Burst</h1>
+                </div>
+                <div class="second">
+                    <div class="content">
+                    <!-- <div class="b1">
+                        <h1>Case Study: 'How We Redesigned Our <br/>
+                            App's UI in Only Three Months' 
+                        </h1>
+                    </div> -->
+                    
+                    <!-- <div class="b2">
+                        Collaboration and flexbility are the names of the game
+                    </div> <br/>
+                    <div class="profile">
+                        <div class="img">
+                            <img src="david.jpeg" style="border-radius: 50% 50%;" alt="avatar">
+                        </div>
+                        <div class="pname">
+                            <p>Dave Feldman</p>
+                            <p>May 20 . 9 min read</p>
+                        </div>
+                        <div class="follow">
+                            <a href="#" class="rect1">Follow</a>
+                        </div> 
+                    </div>  -->
+                    
+                </div> <br/> <br/>
+                <!-- <div class="third">
+                    <div class="data">
+                    <p>We were well prepared for hatred when we launched the redesign,but we 
+                        didn't get it.The reception was overwhelmingly positive. A post-launch,in-
+                        product survey asked customers how much they liked the new look, and on
+                        average they gave it 7.6 out of 10.( if that seems low ,recall that "nobody
+                        notices was an accountable outcome")
+                    </p> <br/>
+                    <p>
+                        Thats not to say everyone loved it. Here's some customers feedback, both
+                        good and bad:
+                    </p>
+                    <p>&#8226; Products like Heap must show far more data at a far greater density than 
+                        the average consumer app
+                    </p>
+                    <p>&#8226; Many products, especially in the consumer space</p>
+                    <p>&#8226; We knew we wanted something modern, but we didn’t just want to look like
+                        everything else; we were hoping to be at least a little distinct.
+                    </p>
+                    <p>&#8226; Heap is an app, not a website; a desktop thing, not a mobile thing.</p>
                     </div>
-                    <div class="b1">
-                        <p>You don`t need a Noble to see the similarities <br/><br/>
-                             between 1999 and 2019
-                        </p>
-                    </div>
-                    <div class="auth">
-                        <p>Scott Galloway in OneZero</p>
-                    </div>
-                    <div class="pub">
-                        <p>may 9 . 6  min read &#9733;</p>
-                    </div>
-                </div> -->
-            </div>
+                </div>  -->
+                </div>
             </div>
             <script src="jquery.min.js"></script>
 	        <script src="ejs.min.js"></script>
@@ -118,6 +87,6 @@
                     $.getJSON("index2.json",function(data){
                         $('.content').html(ejs.rr('templates/index2.ejs',{jdata:data}))
                     });
-            </script>
+            </script>       
         </body>
-</html>
+    </html>
