--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,10 @@
         <body>
             <div class="bg-fluid">
                 <div class="first">
-                <div class="firstb">
+        
                     <div class="leftside">
                     <div class="icon">
-                    <i class="fab fa-medium"></i>
+                    <i class="fab fa-medium" style="font-size: 1.93em;"></i>
                     </div>
                     &nbsp;
                     <div class="name">
@@ -28,7 +28,7 @@
                         <a href="#" class="rect">Get started</a>
                     </div>
                     </div>
-                </div>
+                
                 </div>
                 <div class="second">
                     <div class="content">
