--- a/postmanmockserver/index2.html
+++ b/postmanmockserver/index2.html
@@ -10,10 +10,10 @@
         <body>
             <div class="bg-fluid">
                 <div class="first">
-                <div class="firstb">
+                
                     <div class="leftside">
                     <div class="icon">
-                    <i class="fab fa-medium"></i>
+                    <i class="fab fa-medium" style="font-size: 1.93em;"></i>
                     </div>
                     &nbsp;
                     <div class="name">
@@ -28,7 +28,7 @@
                         <a href="#" class="rect">Get started</a>
                     </div>
                     </div>
-                </div>
+                
                 </div>
                 <div class="second">
                     <div class="content">
@@ -84,7 +84,7 @@
             <script src="ejs-render-remote.js"></script>
             <script>
                 //render the template
-                    $.getJSON("https://fd6e876a-7b46-4cdc-b15d-ccfda4ab2722.mock.pstmn.io/page2",function(data){
+                    $.getJSON("https://6ba0333d-2ff8-4f5c-ba10-aa1a9c07c05c.mock.pstmn.io/page5",function(data){
                         $('.content').html(ejs.rr('templates/index2.ejs',{jdata:data}))
                     });
             </script>       
